// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Temp] render renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn-back"
  >
    <View
      onLayout={[Function]}
      outlined={false}
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "borderBottomColor": "#000000",
            "borderLeftColor": "#000000",
            "borderRightColor": "#000000",
            "borderTopColor": "#000000",
          },
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 20,
              "borderBottomRightRadius": 20,
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 10,
            },
            Array [
              undefined,
              false,
              undefined,
            ],
          ],
        ]
      }
      testID="button-container"
      type="primary"
    >
      <Text />
      <Text
        outlined={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            Array [
              undefined,
              undefined,
            ],
          ]
        }
        type="primary"
      >
        GO BACK
      </Text>
    </View>
  </View>
</View>
`;

exports[`[Temp] render should render [Dark] theme 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#232323",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn-back"
  >
    <View
      onLayout={[Function]}
      outlined={false}
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderBottomColor": "#FFFFFF",
            "borderLeftColor": "#FFFFFF",
            "borderRightColor": "#FFFFFF",
            "borderTopColor": "#FFFFFF",
          },
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 20,
              "borderBottomRightRadius": 20,
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 10,
            },
            Array [
              undefined,
              false,
              undefined,
            ],
          ],
        ]
      }
      testID="button-container"
      type="primary"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#000000",
              },
              Object {
                "marginRight": 4,
              },
            ],
            Object {
              "fontFamily": "IcoMoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        outlined={false}
        style={
          Array [
            Object {
              "color": "#000000",
            },
            Array [
              undefined,
              undefined,
            ],
          ]
        }
        type="primary"
      >
        GO BACK
      </Text>
    </View>
  </View>
</View>
`;
